King James Bible now works with Abbott Smith lexicon
https://github.com/bibledit/cloud/issues/506

--- a/Makefile.in
+++ b/Makefile.in
@@ -853,6 +853,8 @@ GREP = @GREP@
 GUNZIP_PATH = @GUNZIP_PATH@
 GZIP_PATH = @GZIP_PATH@
 HAVE_CXX11 = @HAVE_CXX11@
+ICU_CFLAGS = @ICU_CFLAGS@
+ICU_LIBS = @ICU_LIBS@
 INSTALL = @INSTALL@
 INSTALLMGR_PATH = @INSTALLMGR_PATH@
 INSTALL_DATA = @INSTALL_DATA@
