Cloud requires libxml2
https://github.com/bibledit/cloud/issues/591

--- a/Makefile.am
+++ b/Makefile.am
@@ -564,6 +564,7 @@ AM_CXXFLAGS += $(OPENSSL_CFLAGS)
 AM_CXXFLAGS += $(GTK_CFLAGS)
 AM_CXXFLAGS += $(WEBKIT2GTK_CFLAGS)
 AM_CXXFLAGS += $(ICU_CFLAGS)
+AM_CXXFLAGS += $(XML2_CFLAGS)
 
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl
 LIBS += $(CURL_LIBS)
@@ -572,6 +573,7 @@ LIBS += $(GTK_LIBS)
 LIBS += $(WEBKIT2GTK_LIBS)
 LIBS += -L/usr/local/lib -lmimetic
 LIBS += $(ICU_LIBS)
+LIBS += $(XML2_LIBS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
