--- a/Makefile.in
+++ b/Makefile.in
@@ -860,7 +860,7 @@ LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl $(CURL_LIBS) \
 	$(OPENSSL_LIBS) $(GTK_LIBS) $(WEBKIT2GTK_LIBS) \
-	-L/usr/local/lib -lmimetic $(ICU_LIBS)
+	-L/usr/local/lib -lmimetic $(ICU_LIBS) $(XML2_LIBS)
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -884,6 +884,8 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UNZIP_PATH = @UNZIP_PATH@
 VERSION = @VERSION@
+XML2_CFLAGS = @XML2_CFLAGS@
+XML2_LIBS = @XML2_LIBS@
 ZIP_PATH = @ZIP_PATH@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -1486,7 +1488,7 @@ generate_LDADD = libbibledit.a
 AM_CFLAGS = -Wall -Wextra -pedantic -g $(OPENSSL_CFLAGS)
 AM_CXXFLAGS = -Wall -Wextra -pedantic -std=c++11 -fno-var-tracking -g \
 	$(CURL_CFLAGS) $(OPENSSL_CFLAGS) $(GTK_CFLAGS) \
-	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS)
+	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) $(XML2_CFLAGS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
