Settings' preferences UI improvement and more Implementations: 1. Dialog_List and Dialog_Entry class methods for the preference page on personalize/index.html are simplified. It will be implemented on the other instances if this works as intended and really do help the user. 2. Interface language now can be chosen on the user-level and it would not bother the system-level language setting.
Improvements:
1. The menu for actions menu of notes page on notes/actions.html now has more space from each other for ease of access.

--- a/Makefile.am
+++ b/Makefile.am
@@ -172,6 +172,7 @@ libbibledit_a_SOURCES = \
 	access/logic.cpp \
 	dialog/entry.cpp \
 	dialog/list.cpp \
+	dialog/list2.cpp \
 	dialog/yes.cpp \
 	dialog/color.cpp \
 	dialog/books.cpp \
