--- a/Makefile.in
+++ b/Makefile.in
@@ -198,28 +198,28 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	search/rebibles.$(OBJEXT) search/renotes.$(OBJEXT) \
 	access/user.$(OBJEXT) access/bible.$(OBJEXT) \
 	access/logic.$(OBJEXT) dialog/entry.$(OBJEXT) \
-	dialog/list.$(OBJEXT) dialog/yes.$(OBJEXT) \
-	dialog/color.$(OBJEXT) dialog/books.$(OBJEXT) \
-	dialog/upload.$(OBJEXT) fonts/logic.$(OBJEXT) \
-	versification/index.$(OBJEXT) versification/system.$(OBJEXT) \
-	versification/logic.$(OBJEXT) book/create.$(OBJEXT) \
-	compare/index.$(OBJEXT) compare/compare.$(OBJEXT) \
-	jobs/index.$(OBJEXT) redirect/index.$(OBJEXT) \
-	editone2/index.$(OBJEXT) editone2/load.$(OBJEXT) \
-	editone2/save.$(OBJEXT) editone2/verse.$(OBJEXT) \
-	editone2/logic.$(OBJEXT) editone2/update.$(OBJEXT) \
-	navigation/passage.$(OBJEXT) navigation/update.$(OBJEXT) \
-	navigation/poll.$(OBJEXT) navigation/paratext.$(OBJEXT) \
-	ipc/focus.$(OBJEXT) ipc/notes.$(OBJEXT) \
-	checksum/logic.$(OBJEXT) editusfm/focus.$(OBJEXT) \
-	editusfm/index.$(OBJEXT) editusfm/load.$(OBJEXT) \
-	editusfm/offset.$(OBJEXT) editusfm/save.$(OBJEXT) \
-	editor/styles.$(OBJEXT) editor/html2usfm.$(OBJEXT) \
-	editor/usfm2html.$(OBJEXT) editor/select.$(OBJEXT) \
-	editor/html2format.$(OBJEXT) editor/id.$(OBJEXT) \
-	editor/style.$(OBJEXT) edit/edit.$(OBJEXT) edit/id.$(OBJEXT) \
-	edit/index.$(OBJEXT) edit/load.$(OBJEXT) edit/save.$(OBJEXT) \
-	edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
+	dialog/list.$(OBJEXT) dialog/list2.$(OBJEXT) \
+	dialog/yes.$(OBJEXT) dialog/color.$(OBJEXT) \
+	dialog/books.$(OBJEXT) dialog/upload.$(OBJEXT) \
+	fonts/logic.$(OBJEXT) versification/index.$(OBJEXT) \
+	versification/system.$(OBJEXT) versification/logic.$(OBJEXT) \
+	book/create.$(OBJEXT) compare/index.$(OBJEXT) \
+	compare/compare.$(OBJEXT) jobs/index.$(OBJEXT) \
+	redirect/index.$(OBJEXT) editone2/index.$(OBJEXT) \
+	editone2/load.$(OBJEXT) editone2/save.$(OBJEXT) \
+	editone2/verse.$(OBJEXT) editone2/logic.$(OBJEXT) \
+	editone2/update.$(OBJEXT) navigation/passage.$(OBJEXT) \
+	navigation/update.$(OBJEXT) navigation/poll.$(OBJEXT) \
+	navigation/paratext.$(OBJEXT) ipc/focus.$(OBJEXT) \
+	ipc/notes.$(OBJEXT) checksum/logic.$(OBJEXT) \
+	editusfm/focus.$(OBJEXT) editusfm/index.$(OBJEXT) \
+	editusfm/load.$(OBJEXT) editusfm/offset.$(OBJEXT) \
+	editusfm/save.$(OBJEXT) editor/styles.$(OBJEXT) \
+	editor/html2usfm.$(OBJEXT) editor/usfm2html.$(OBJEXT) \
+	editor/select.$(OBJEXT) editor/html2format.$(OBJEXT) \
+	editor/id.$(OBJEXT) editor/style.$(OBJEXT) edit/edit.$(OBJEXT) \
+	edit/id.$(OBJEXT) edit/index.$(OBJEXT) edit/load.$(OBJEXT) \
+	edit/save.$(OBJEXT) edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
 	edit/preview.$(OBJEXT) edit/position.$(OBJEXT) \
 	edit/navigate.$(OBJEXT) edit/update.$(OBJEXT) \
 	search/all.$(OBJEXT) search/index.$(OBJEXT) \
@@ -476,24 +476,25 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	developer/$(DEPDIR)/index.Po developer/$(DEPDIR)/logic.Po \
 	dialog/$(DEPDIR)/books.Po dialog/$(DEPDIR)/color.Po \
 	dialog/$(DEPDIR)/entry.Po dialog/$(DEPDIR)/list.Po \
-	dialog/$(DEPDIR)/upload.Po dialog/$(DEPDIR)/yes.Po \
-	edit/$(DEPDIR)/edit.Po edit/$(DEPDIR)/id.Po \
-	edit/$(DEPDIR)/index.Po edit/$(DEPDIR)/load.Po \
-	edit/$(DEPDIR)/logic.Po edit/$(DEPDIR)/navigate.Po \
-	edit/$(DEPDIR)/position.Po edit/$(DEPDIR)/preview.Po \
-	edit/$(DEPDIR)/save.Po edit/$(DEPDIR)/styles.Po \
-	edit/$(DEPDIR)/update.Po editone2/$(DEPDIR)/index.Po \
-	editone2/$(DEPDIR)/load.Po editone2/$(DEPDIR)/logic.Po \
-	editone2/$(DEPDIR)/save.Po editone2/$(DEPDIR)/update.Po \
-	editone2/$(DEPDIR)/verse.Po editor/$(DEPDIR)/html2format.Po \
-	editor/$(DEPDIR)/html2usfm.Po editor/$(DEPDIR)/id.Po \
-	editor/$(DEPDIR)/select.Po editor/$(DEPDIR)/style.Po \
-	editor/$(DEPDIR)/styles.Po editor/$(DEPDIR)/usfm2html.Po \
-	editusfm/$(DEPDIR)/focus.Po editusfm/$(DEPDIR)/index.Po \
-	editusfm/$(DEPDIR)/load.Po editusfm/$(DEPDIR)/offset.Po \
-	editusfm/$(DEPDIR)/save.Po email/$(DEPDIR)/index.Po \
-	email/$(DEPDIR)/receive.Po email/$(DEPDIR)/send.Po \
-	esword/$(DEPDIR)/text.Po executable/$(DEPDIR)/bibledit.Po \
+	dialog/$(DEPDIR)/list2.Po dialog/$(DEPDIR)/upload.Po \
+	dialog/$(DEPDIR)/yes.Po edit/$(DEPDIR)/edit.Po \
+	edit/$(DEPDIR)/id.Po edit/$(DEPDIR)/index.Po \
+	edit/$(DEPDIR)/load.Po edit/$(DEPDIR)/logic.Po \
+	edit/$(DEPDIR)/navigate.Po edit/$(DEPDIR)/position.Po \
+	edit/$(DEPDIR)/preview.Po edit/$(DEPDIR)/save.Po \
+	edit/$(DEPDIR)/styles.Po edit/$(DEPDIR)/update.Po \
+	editone2/$(DEPDIR)/index.Po editone2/$(DEPDIR)/load.Po \
+	editone2/$(DEPDIR)/logic.Po editone2/$(DEPDIR)/save.Po \
+	editone2/$(DEPDIR)/update.Po editone2/$(DEPDIR)/verse.Po \
+	editor/$(DEPDIR)/html2format.Po editor/$(DEPDIR)/html2usfm.Po \
+	editor/$(DEPDIR)/id.Po editor/$(DEPDIR)/select.Po \
+	editor/$(DEPDIR)/style.Po editor/$(DEPDIR)/styles.Po \
+	editor/$(DEPDIR)/usfm2html.Po editusfm/$(DEPDIR)/focus.Po \
+	editusfm/$(DEPDIR)/index.Po editusfm/$(DEPDIR)/load.Po \
+	editusfm/$(DEPDIR)/offset.Po editusfm/$(DEPDIR)/save.Po \
+	email/$(DEPDIR)/index.Po email/$(DEPDIR)/receive.Po \
+	email/$(DEPDIR)/send.Po esword/$(DEPDIR)/text.Po \
+	executable/$(DEPDIR)/bibledit.Po \
 	executable/$(DEPDIR)/generate.Po \
 	export/$(DEPDIR)/bibledropbox.Po export/$(DEPDIR)/esword.Po \
 	export/$(DEPDIR)/html.Po export/$(DEPDIR)/index.Po \
@@ -1108,6 +1109,7 @@ libbibledit_a_SOURCES = \
 	access/logic.cpp \
 	dialog/entry.cpp \
 	dialog/list.cpp \
+	dialog/list2.cpp \
 	dialog/yes.cpp \
 	dialog/color.cpp \
 	dialog/books.cpp \
@@ -2152,6 +2154,8 @@ dialog/$(DEPDIR)/$(am__dirstamp):
 dialog/entry.$(OBJEXT): dialog/$(am__dirstamp) \
 	dialog/$(DEPDIR)/$(am__dirstamp)
 dialog/list.$(OBJEXT): dialog/$(am__dirstamp) \
+	dialog/$(DEPDIR)/$(am__dirstamp)
+dialog/list2.$(OBJEXT): dialog/$(am__dirstamp) \
 	dialog/$(DEPDIR)/$(am__dirstamp)
 dialog/yes.$(OBJEXT): dialog/$(am__dirstamp) \
 	dialog/$(DEPDIR)/$(am__dirstamp)
@@ -3408,6 +3412,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@dialog/$(DEPDIR)/color.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@dialog/$(DEPDIR)/entry.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@dialog/$(DEPDIR)/list.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@dialog/$(DEPDIR)/list2.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@dialog/$(DEPDIR)/upload.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@dialog/$(DEPDIR)/yes.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@edit/$(DEPDIR)/edit.Po@am__quote@ # am--include-marker
@@ -4485,6 +4490,7 @@ distclean: distclean-am
 	-rm -f dialog/$(DEPDIR)/color.Po
 	-rm -f dialog/$(DEPDIR)/entry.Po
 	-rm -f dialog/$(DEPDIR)/list.Po
+	-rm -f dialog/$(DEPDIR)/list2.Po
 	-rm -f dialog/$(DEPDIR)/upload.Po
 	-rm -f dialog/$(DEPDIR)/yes.Po
 	-rm -f edit/$(DEPDIR)/edit.Po
@@ -5073,6 +5079,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f dialog/$(DEPDIR)/color.Po
 	-rm -f dialog/$(DEPDIR)/entry.Po
 	-rm -f dialog/$(DEPDIR)/list.Po
+	-rm -f dialog/$(DEPDIR)/list2.Po
 	-rm -f dialog/$(DEPDIR)/upload.Po
 	-rm -f dialog/$(DEPDIR)/yes.Po
 	-rm -f edit/$(DEPDIR)/edit.Po
